--- a/src/Wellcome.Dds/IIIF/IIIF.csproj
+++ b/src/Wellcome.Dds/IIIF/IIIF.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Content" />
+    <Folder Include="Presentation\Services" />
+  </ItemGroup>
+
 </Project>
