--- a/src/Wellcome.Dds/Wellcome.Dds.Server/Wellcome.Dds.Server.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/Wellcome.Dds.Server.csproj
@@ -23,6 +23,7 @@
       <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="3.1.5" />
       <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
       <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="1.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     </ItemGroup>
 
@@ -51,6 +52,7 @@
 
     <ItemGroup>
       <Folder Include="wwwroot\partners" />
+      <Folder Include="wwwroot\posters" />
     </ItemGroup>
 
 </Project>
