--- a/src/PdfCoverPage/requirements.txt
+++ b/src/PdfCoverPage/requirements.txt
@@ -31,6 +31,7 @@ more-itertools==8.6.0
 moto==1.3.16
 networkx==2.5
 packaging==20.8
+Pillow==8.1.0
 pluggy==0.13.1
 py==1.10.0
 pyasn1==0.4.8
@@ -43,6 +44,7 @@ python-jose==3.2.0
 pytz==2020.5
 pywin32==227
 PyYAML==5.4.1
+reportlab==3.5.60
 requests==2.25.1
 responses==0.12.1
 rsa==4.7
