--- a/src/PdfCoverPage/requirements.txt
+++ b/src/PdfCoverPage/requirements.txt
@@ -3,8 +3,8 @@ attrs==20.3.0
 aws-sam-translator==1.33.0
 aws-xray-sdk==2.6.0
 boto==2.49.0
-boto3==1.16.59
-botocore==1.19.59
+boto3==1.16.60
+botocore==1.19.60
 certifi==2020.12.5
 cffi==1.14.4
 cfn-lint==0.44.4
@@ -31,6 +31,7 @@ more-itertools==8.6.0
 moto==1.3.16
 networkx==2.5
 packaging==20.8
+Pillow==8.1.0
 pluggy==0.13.1
 py==1.10.0
 pyasn1==0.4.8
@@ -43,6 +44,7 @@ python-jose==3.2.0
 pytz==2020.5
 pywin32==227
 PyYAML==5.4.1
+reportlab==3.5.60
 requests==2.25.1
 responses==0.12.1
 rsa==4.7
@@ -50,7 +52,7 @@ s3transfer==0.3.4
 six==1.15.0
 sshpubkeys==3.3.0
 toml==0.10.2
-urllib3==1.26.2
+urllib3==1.26.3
 websocket-client==0.57.0
 Werkzeug==1.0.1
 wrapt==1.12.1
