--- a/src/Wellcome.Dds/CatalogueClient/CatalogueClient.csproj
+++ b/src/Wellcome.Dds/CatalogueClient/CatalogueClient.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ShellProgressBar" Version="5.0.0" />
       <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20303.1" />
     </ItemGroup>
 
