enable binary serialisation

--- a/src/Wellcome.Dds/DlcsJobProcessor/DlcsJobProcessor.csproj
+++ b/src/Wellcome.Dds/DlcsJobProcessor/DlcsJobProcessor.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <LangVersion>9</LangVersion>
+    <EnableUnsafeBinaryFormatterSerialization>true</EnableUnsafeBinaryFormatterSerialization>
   </PropertyGroup>
 
   <ItemGroup>
