--- a/Dockerfile-jobprocessor
+++ b/Dockerfile-jobprocessor
@@ -29,6 +29,8 @@ RUN dotnet publish "DlcsJobProcessor.csproj" -c Release -o /app/publish
 
 # Runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim
+
+RUN apt-get update && apt-get install curl -y
 WORKDIR /app
 
 EXPOSE 80
