--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -76,6 +76,22 @@
       "Container": "wellcomecollection-stage-iiif-storagemaps",
       "Prefix": "stgmap-",
       "MemoryCacheSeconds": 180
+    },
+    "Wellcome.Dds.WordsAndPictures.Text": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-stage-iiif-text",
+      "Prefix": "stgtext-",
+      "MemoryCacheSeconds": 180
+    },
+    "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-stage-iiif-annotations",
+      "Prefix": "stgannos-",
+      "MemoryCacheSeconds": 180
     }
   }
 }
