--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -66,7 +66,8 @@
     "DlcsReturnUrl": "https://dlcs.io/auth/2/fromcas",
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-iiif-text",
-    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations"
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
+    "ReferenceV0SearchService": true
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
