--- a/src/Wellcome.Dds/Utils/Utils.csproj
+++ b/src/Wellcome.Dds/Utils/Utils.csproj
@@ -7,9 +7,11 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
