--- a/src/Wellcome.Dds/Wellcome.Dds.Server/Wellcome.Dds.Server.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/Wellcome.Dds.Server.csproj
@@ -56,4 +56,8 @@
       <Folder Include="wwwroot\posters" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="wwwroot\robots.txt" />
+    </ItemGroup>
+
 </Project>
