Add feature flags to dds.server

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -93,5 +93,9 @@
       "Prefix": "stgannos-",
       "MemoryCacheSeconds": 180
     }
+  },
+  "FeatureManagement": {
+    "TextServices": true,
+    "PresentationServices": true
   }
 }
