Add zip text to collections, remove catalogue from UriPatterns

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -51,8 +51,9 @@
     "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
     "GoobiCall": "DO NOT CALL",
-    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
-    "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas"
+    "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas",
+    "WellcomeCollectionApi": "https://api.wellcomecollection.org",
+    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
