--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -61,12 +61,13 @@
     "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
     "GoobiCall": "DO NOT CALL",
-    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
     "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas",
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
-    "ReferenceV0SearchService": true
+    "ReferenceV0SearchService": true,
+    "WellcomeCollectionApi": "https://api.wellcomecollection.org",
+    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
