--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -65,6 +65,7 @@
     "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
     "GoobiCall": "DO NOT CALL",
+    "WellcomeCollectionApi": "https://api.wellcomecollection.org",
     "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works"
   },
   "BinaryObjectCache": {
