--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -22,11 +22,13 @@
     "TextContainer": "wellcomecollection-iiif-text",
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
     "MinimumJobAgeMinutes": 10,
-    "WorkflowMessageQueues": [
+    "WorkflowMessageListenQueues": [
       "born-digital-notifications-prod",
       "digitised-notifications-prod"
     ],
-    "WorkflowMessagePoll": false
+    "WorkflowMessagePoll": false,
+    "DashboardPushBornDigitalQueue": "born-digital-notifications-prod",
+    "DashboardPushDigitisedQueue": "digitised-notifications-prod"
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
