--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
@@ -24,11 +24,13 @@
     "PresentationContainer": "wellcomecollection-stage-new-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-new-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-new-iiif-annotations",
-    "WorkflowMessageQueues": [
+    "WorkflowMessageListenQueues": [
       "born-digital-notifications-staging-new",
       "digitised-notifications-staging-new"
     ],
-    "WorkflowMessagePoll": false
+    "WorkflowMessagePoll": false,
+    "DashboardPushBornDigitalQueue": "born-digital-notifications-staging-new",
+    "DashboardPushDigitisedQueue": "digitised-notifications-staging-new"
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
