--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -21,11 +21,13 @@
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
-    "WorkflowMessageQueues": [
+    "WorkflowMessageListenQueues": [
       "born-digital-notifications-test",
       "digitised-notifications-test"
     ],
-    "WorkflowMessagePoll": false
+    "WorkflowMessagePoll": false,
+    "DashboardPushBornDigitalQueue": "born-digital-notifications-test",
+    "DashboardPushDigitisedQueue": "digitised-notifications-test"
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
