dashboard gets push queues, workflowprocessor gets listen queues

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
@@ -25,7 +25,9 @@
     "TextContainer": "wellcomecollection-stage-new-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-new-iiif-annotations",
     "IncludeExtraAccessConditionsInManifest": "Missing,Unknown",
-    "PlaceholderCanvasCacheTimeDays": 0
+    "PlaceholderCanvasCacheTimeDays": 0,
+    "DashboardPushBornDigitalQueue": "born-digital-notifications-staging-new",
+    "DashboardPushDigitisedQueue": "digitised-notifications-staging-new"
   },
   "Dash": {
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
