--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -26,9 +26,7 @@
       "born-digital-notifications-prod",
       "digitised-notifications-prod"
     ],
-    "WorkflowMessagePoll": false,
-    "DashboardPushBornDigitalQueue": "born-digital-notifications-prod",
-    "DashboardPushDigitisedQueue": "digitised-notifications-prod"
+    "WorkflowMessagePoll": false
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
