--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -25,9 +25,7 @@
       "born-digital-notifications-test",
       "digitised-notifications-test"
     ],
-    "WorkflowMessagePoll": false,
-    "DashboardPushBornDigitalQueue": "born-digital-notifications-test",
-    "DashboardPushDigitisedQueue": "digitised-notifications-test"
+    "WorkflowMessagePoll": false
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
