--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
@@ -25,9 +25,7 @@
       "born-digital-notifications-staging",
       "digitised-notifications-staging"
     ],
-    "WorkflowMessagePoll": false,
-    "DashboardPushBornDigitalQueue": "born-digital-notifications-staging",
-    "DashboardPushDigitisedQueue": "digitised-notifications-staging"
+    "WorkflowMessagePoll": false
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
