--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -18,7 +18,9 @@
     "TextContainer": "wellcomecollection-iiif-text",
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
     "MinimumJobAgeMinutes": 10,
-    "PlaceholderCanvasCacheTimeDays": 28
+    "PlaceholderCanvasCacheTimeDays": 28,
+    "DashboardPushBornDigitalQueue": "born-digital-notifications-prod",
+    "DashboardPushDigitisedQueue": "digitised-notifications-prod"
   },
   "Dash": {
     "JobProcessorName": "job-processor-prod",
