--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -22,7 +22,9 @@
     "TextContainer": "wellcomecollection-stage-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
     "IncludeExtraAccessConditionsInManifest": "Missing,Unknown",
-    "PlaceholderCanvasCacheTimeDays": 0
+    "PlaceholderCanvasCacheTimeDays": 0,
+    "DashboardPushBornDigitalQueue": "born-digital-notifications-staging",
+    "DashboardPushDigitisedQueue": "digitised-notifications-staging"
   },
   "Dash": {
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
