--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
@@ -28,9 +28,7 @@
       "born-digital-notifications-staging-new",
       "digitised-notifications-staging-new"
     ],
-    "WorkflowMessagePoll": false,
-    "DashboardPushBornDigitalQueue": "born-digital-notifications-staging-new",
-    "DashboardPushDigitisedQueue": "digitised-notifications-staging-new"
+    "WorkflowMessagePoll": false
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
