min job age 10 mins, alwasys flush caches from workflowprocessor

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
@@ -24,6 +24,7 @@
     "PresentationContainer": "wellcomecollection-stage-new-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-new-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-new-iiif-annotations",
+    "MinimumJobAgeMinutes": 1,
     "WorkflowMessageListenQueues": [
       "born-digital-notifications-staging-new",
       "digitised-notifications-staging-new"
