--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
@@ -21,6 +21,7 @@
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
+    "MinimumJobAgeMinutes": 10,
     "WorkflowMessageListenQueues": [
       "born-digital-notifications-staging",
       "digitised-notifications-staging"
