turn on listening for stage-new env workflowprocessoer

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
@@ -29,7 +29,7 @@
       "born-digital-notifications-staging-new",
       "digitised-notifications-staging-new"
     ],
-    "WorkflowMessagePoll": false
+    "WorkflowMessagePoll": true
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
