Links from dash to portal pages become templates in appSettings

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
@@ -17,7 +17,9 @@
     "ApiEntryPoint": "https://newapi.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
     "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
-    "PreventSynchronisation": false
+    "PreventSynchronisation": false,
+    "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
+    "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage-new.wellcomecollection.org",
