--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -31,7 +31,9 @@
     "ApiEntryPoint": "https://api.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
     "BatchSize": 100,
-    "PreventSynchronisation": false
+    "PreventSynchronisation": false,
+    "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
+    "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}"
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
