Add left hand menu commands

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -28,6 +28,7 @@
     "CustomerId": 2,
     "CustomerName": "Wellcome",
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
+    "SingleAssetManifestTemplate": "https://dlcs.io/iiif-manifest/wellcome/{0}/{1}",
     "ApiEntryPoint": "https://api.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
     "BatchSize": 100,
