Use Delivery Channels on stage-new

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
@@ -20,7 +20,8 @@
     "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
     "PreventSynchronisation": false,
     "PortalPageTemplate": "https://portal.dlcs.digirati.io/images/{0}/{1}",
-    "PortalBatchTemplate": "https://portal.dlcs.digirati.io/batches/{0}"
+    "PortalBatchTemplate": "https://portal.dlcs.digirati.io/batches/{0}",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage-new.wellcomecollection.org",
