--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-New.json
@@ -17,7 +17,8 @@
     "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://newapi.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
-    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/"
+    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage-new.wellcomecollection.org"
