Fix text cache config inheriting base appSetting

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-New.json
@@ -34,6 +34,14 @@
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
       "Container": "wellcomecollection-stage-new-iiif-storagemaps",
       "Prefix": "stgmap-"
+    },
+    "Wellcome.Dds.WordsAndPictures.Text": {
+      "Container": "wellcomecollection-stage-new-iiif-text",
+      "Prefix": "stgtext-"
+    },
+    "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
+      "Container": "wellcomecollection-stage-new-iiif-annotations",
+      "Prefix": "stgannos-"
     }
   },
   "S3CacheOptions": {
