--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging.json
@@ -30,6 +30,14 @@
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
       "Container": "wellcomecollection-stage-iiif-storagemaps",
       "Prefix": "stgmap-"
+    },
+    "Wellcome.Dds.WordsAndPictures.Text": {
+      "Container": "wellcomecollection-stage-iiif-text",
+      "Prefix": "stgtext-"
+    },
+    "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
+      "Container": "wellcomecollection-stage-iiif-annotations",
+      "Prefix": "stgannos-"
     }
   }
 }
