--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
@@ -36,7 +36,7 @@
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://api.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
-    "InternalResourceEntryPoint": "https://orchestrator.dlcs.io/",
+    "InternalResourceEntryPoint": "https://dlcs.io/",
     "BatchSize": 100,
     "PreventSynchronisation": false,
     "PdfQueryName": "pdf-item",
