--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
@@ -15,7 +15,7 @@
     "CustomerDefaultSpace": 6,
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "SingleAssetManifestTemplate": "https://dlcs.io/iiif-manifest/wellcome/{0}/{1}",
-    "ApiEntryPoint": "https://dlcs.io/",
+    "ApiEntryPoint": "https://api.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
     "InternalResourceEntryPoint": "https://dlcs.io/",
     "PreventSynchronisation": false,
