--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
@@ -14,7 +14,7 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
+    "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/",
     "SupportsDeliveryChannels": true
   },
   "Dds": {
